--- a/test_freeRtOs.ioc
+++ b/test_freeRtOs.ioc
@@ -5,6 +5,18 @@ CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.IPParameters=ART_ACCLERATOR_ENABLE,PREFETCH_ENABLE,CPU_ICache,CPU_DCache,MPU_Control
 CORTEX_M7.MPU_Control=__NULL
 CORTEX_M7.PREFETCH_ENABLE=1
+Dma.Request0=USART3_RX
+Dma.RequestsNb=1
+Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_RX.0.Instance=DMA1_Stream1
+Dma.USART3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.0.Mode=DMA_NORMAL
+Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
@@ -22,22 +34,23 @@ LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_TCP,MEMP_NUM_TCP_PCB
 LWIP.IP_ADDRESS=192.168.001.010
 LWIP.LWIP_DHCP=0
 LWIP.LWIP_TCP=0
-LWIP.MEMP_NUM_TCP_PCB=0
+LWIP.MEMP_NUM_TCP_PCB=1
 LWIP.MEMP_NUM_UDP_PCB=2
 LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=ETH
-Mcu.IP2=FREERTOS
-Mcu.IP3=LWIP
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=USART3
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP1=DMA
+Mcu.IP10=USB_OTG_FS
+Mcu.IP2=ETH
+Mcu.IP3=FREERTOS
+Mcu.IP4=LWIP
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32F746ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -81,6 +94,7 @@ Mcu.UserName=STM32F746ZGTx
 MxCube.Version=4.25.1
 MxDb.Version=DB.4.0.251
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
@@ -242,7 +256,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=/home/cheff/STM32Cube/Repository/STM32Cube_FW_F7_V1.11.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F746ZGTx
@@ -262,7 +276,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_LWIP_Init-LWIP-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
