--- a/test_freeRtOs.ioc
+++ b/test_freeRtOs.ioc
@@ -17,25 +17,31 @@ Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
+ETH.IPParameters=MediaInterface,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
-ETH.PHY_Name=LAN8742A_PHY_ADDRESS
-ETH.PHY_Value=0
 ETH.PhyAddress=0
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,FootprintOK,configIDLE_SHOULD_YIELD,INCLUDE_vTaskDelayUntil,Queues01
-FREERTOS.Queues01=RxUartQueue,1,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=idle,-3,128,idle_start,Default,NULL,Dynamic,NULL,NULL;asserv_task,3,1024,start_asserv_task,As external,NULL,Dynamic,NULL,NULL;background_task,-2,1024,start_background_task,As external,NULL,Dynamic,NULL,NULL;io_task,1,1024,start_io_task,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,configIDLE_SHOULD_YIELD,INCLUDE_vTaskDelayUntil,Queues01,MEMORY_ALLOCATION
+FREERTOS.MEMORY_ALLOCATION=2
+FREERTOS.Queues01=RxUartQueue,1,uint16_t,0,Static,RxUartQueueBuffer,RxUartQueueControlBlock
+FREERTOS.Tasks01=idle,-3,128,idle_start,Default,NULL,Static,idleBuffer,idleControlBlock;asserv_task,3,512,start_asserv_task,As external,NULL,Static,asserv_taskBuffer,asserv_taskControlBlock;background_task,-2,512,start_background_task,As external,NULL,Static,background_taskBuffer,background_taskControlBlock;io_task,1,1024,start_io_task,As external,NULL,Static,io_taskBuffer,io_taskControlBlock
 FREERTOS.configIDLE_SHOULD_YIELD=0
 File.Version=6
 KeepUserPlacement=true
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_TCP,MEMP_NUM_TCP_PCB,MEMP_NUM_UDP_PCB
-LWIP.IP_ADDRESS=192.168.001.010
+LWIP.CHECKSUM_BY_HARDWARE=1
+LWIP.CHECKSUM_CHECK_ICMP=1
+LWIP.CHECKSUM_CHECK_ICMP6=1
+LWIP.CHECKSUM_CHECK_IP=1
+LWIP.CHECKSUM_CHECK_UDP=1
+LWIP.CHECKSUM_GEN_ICMP=1
+LWIP.CHECKSUM_GEN_ICMP6=1
+LWIP.CHECKSUM_GEN_IP=1
+LWIP.CHECKSUM_GEN_UDP=1
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_TCP,CHECKSUM_BY_HARDWARE,CHECKSUM_GEN_UDP,CHECKSUM_GEN_IP,CHECKSUM_GEN_ICMP,CHECKSUM_GEN_ICMP6,CHECKSUM_CHECK_IP,CHECKSUM_CHECK_UDP,CHECKSUM_CHECK_ICMP,CHECKSUM_CHECK_ICMP6
+LWIP.IP_ADDRESS=192.168.010.002
 LWIP.LWIP_DHCP=0
 LWIP.LWIP_TCP=0
-LWIP.MEMP_NUM_TCP_PCB=1
-LWIP.MEMP_NUM_UDP_PCB=2
 LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F7
@@ -55,39 +61,40 @@ Mcu.Name=STM32F746ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PE9
-Mcu.Pin13=PE11
-Mcu.Pin14=PB13
-Mcu.Pin15=PB14
-Mcu.Pin16=PD8
-Mcu.Pin17=PD9
-Mcu.Pin18=PG6
-Mcu.Pin19=PG7
+Mcu.Pin10=PC4
+Mcu.Pin11=PC5
+Mcu.Pin12=PF12
+Mcu.Pin13=PE9
+Mcu.Pin14=PE11
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PD8
+Mcu.Pin18=PD9
+Mcu.Pin19=PG6
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PA8
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PG11
-Mcu.Pin28=PG13
-Mcu.Pin29=PB3
+Mcu.Pin20=PG7
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PG11
+Mcu.Pin29=PG13
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PB7
-Mcu.Pin31=VP_FREERTOS_VS_ENABLE
-Mcu.Pin32=VP_LWIP_VS_Enabled
-Mcu.Pin33=VP_SYS_VS_tim11
+Mcu.Pin30=PB3
+Mcu.Pin31=PB7
+Mcu.Pin32=VP_FREERTOS_VS_ENABLE
+Mcu.Pin33=VP_LWIP_VS_Enabled
+Mcu.Pin34=VP_SYS_VS_tim11
 Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=34
+Mcu.Pin5=PC0
+Mcu.Pin6=PC1
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA7
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
@@ -96,7 +103,8 @@ MxDb.Version=DB.4.0.251
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:false\:true
-NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:false
+NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.ETH_WKUP_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false\:true
@@ -109,9 +117,6 @@ NVIC.TimeBase=TIM1_TRG_COM_TIM11_IRQn
 NVIC.TimeBaseIP=TIM11
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
-PA1.Locked=true
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
 PA10.GPIOParameters=GPIO_Label
@@ -143,8 +148,6 @@ PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
@@ -158,10 +161,6 @@ PA9.GPIO_Label=USB_VBUS
 PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=LEDG
-PB0.Locked=true
-PB0.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
@@ -179,13 +178,15 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LEDB
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PC0.Locked=true
+PC0.Signal=FMC_SDNWE
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=USER_Btn [B1]
+PC13.GPIO_Label=LEDG
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
@@ -224,6 +225,8 @@ PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
 PE11.Signal=S_TIM1_CH2
 PE9.Signal=S_TIM1_CH1
+PF12.Locked=true
+PF12.Signal=GPXTI12
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
@@ -276,39 +279,39 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_LWIP_Init-LWIP-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_LWIP_Init-LWIP-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
-RCC.AHBFreq_Value=216000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=54000000
-RCC.APB1TimFreq_Value=108000000
+RCC.AHBFreq_Value=72000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=108000000
-RCC.APB2TimFreq_Value=216000000
+RCC.APB2Freq_Value=36000000
+RCC.APB2TimFreq_Value=72000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=216000000
-RCC.EthernetFreq_Value=216000000
-RCC.FCLKCortexFreq_Value=216000000
+RCC.CortexFreq_Value=72000000
+RCC.EthernetFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=216000000
+RCC.HCLKFreq_Value=72000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=54000000
-RCC.I2C2Freq_Value=54000000
-RCC.I2C3Freq_Value=54000000
-RCC.I2C4Freq_Value=54000000
+RCC.I2C1Freq_Value=36000000
+RCC.I2C2Freq_Value=36000000
+RCC.I2C3Freq_Value=36000000
+RCC.I2C4Freq_Value=36000000
 RCC.I2SClocksFreq_Value=48000000
 RCC.I2SFreq_Value=192000000
 RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
 RCC.LCDTFToutputFreq_Value=96000000
-RCC.LPTIM1Freq_Value=54000000
+RCC.LPTIM1Freq_Value=36000000
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.MCO2PinFreq_Value=216000000
+RCC.MCO2PinFreq_Value=72000000
 RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=216000000
+RCC.PLLCLKFreq_Value=72000000
 RCC.PLLI2SPCLKFreq_Value=192000000
 RCC.PLLI2SQCLKFreq_Value=192000000
 RCC.PLLI2SRCLKFreq_Value=192000000
@@ -316,8 +319,8 @@ RCC.PLLI2SRoutputFreq_Value=192000000
 RCC.PLLM=4
 RCC.PLLMCOFreq_Value=72000000
 RCC.PLLMUL=RCC_PLL_MUL9
-RCC.PLLN=216
-RCC.PLLQ=9
+RCC.PLLN=72
+RCC.PLLQ=3
 RCC.PLLQCLKFreq_Value=48000000
 RCC.PLLQoutputFreq_Value=48000000
 RCC.PLLSAIPCLKFreq_Value=192000000
@@ -330,9 +333,9 @@ RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI1Freq_Value=192000000
 RCC.SAI2Freq_Value=192000000
-RCC.SDMMCFreq_Value=216000000
+RCC.SDMMCFreq_Value=72000000
 RCC.SPDIFRXFreq_Value=192000000
-RCC.SYSCLKFreq_VALUE=216000000
+RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIM15Freq_Value=72000000
@@ -343,22 +346,26 @@ RCC.TIM20Freq_Value=72000000
 RCC.TIM2Freq_Value=72000000
 RCC.TIM3Freq_Value=72000000
 RCC.TIM8Freq_Value=72000000
-RCC.UART4Freq_Value=54000000
-RCC.UART5Freq_Value=54000000
-RCC.UART7Freq_Value=54000000
-RCC.UART8Freq_Value=54000000
-RCC.USART1Freq_Value=108000000
-RCC.USART2Freq_Value=54000000
-RCC.USART3Freq_Value=54000000
-RCC.USART6Freq_Value=108000000
+RCC.UART4Freq_Value=36000000
+RCC.UART5Freq_Value=36000000
+RCC.UART7Freq_Value=36000000
+RCC.UART8Freq_Value=36000000
+RCC.USART1Freq_Value=36000000
+RCC.USART2Freq_Value=36000000
+RCC.USART3Freq_Value=36000000
+RCC.USART6Freq_Value=36000000
 RCC.USBFreq_Value=48000000
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutput2Freq_Value=8000000
-RCC.VCOOutputFreq_Value=432000000
+RCC.VCOOutputFreq_Value=144000000
 RCC.VCOSAIOutputFreq_Value=384000000
 RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
+SH.FMC_SDNWE.0=FMC_SDNWE
+SH.FMC_SDNWE.ConfNb=1
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
