--- a/test_freeRtOs.ioc
+++ b/test_freeRtOs.ioc
@@ -38,8 +38,10 @@ LWIP.CHECKSUM_GEN_ICMP=1
 LWIP.CHECKSUM_GEN_ICMP6=1
 LWIP.CHECKSUM_GEN_IP=1
 LWIP.CHECKSUM_GEN_UDP=1
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_TCP,CHECKSUM_BY_HARDWARE,CHECKSUM_GEN_UDP,CHECKSUM_GEN_IP,CHECKSUM_GEN_ICMP,CHECKSUM_GEN_ICMP6,CHECKSUM_CHECK_IP,CHECKSUM_CHECK_UDP,CHECKSUM_CHECK_ICMP,CHECKSUM_CHECK_ICMP6
+LWIP.ICMP_DEBUG=LWIP_DBG_ON
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_TCP,CHECKSUM_BY_HARDWARE,CHECKSUM_GEN_UDP,CHECKSUM_GEN_IP,CHECKSUM_GEN_ICMP,CHECKSUM_GEN_ICMP6,CHECKSUM_CHECK_IP,CHECKSUM_CHECK_UDP,CHECKSUM_CHECK_ICMP,CHECKSUM_CHECK_ICMP6,LWIP_DBG_MIN_LEVEL,ICMP_DEBUG
 LWIP.IP_ADDRESS=192.168.010.002
+LWIP.LWIP_DBG_MIN_LEVEL=LWIP_DBG_LEVEL_WARNING
 LWIP.LWIP_DHCP=0
 LWIP.LWIP_TCP=0
 LWIP.NETMASK_ADDRESS=255.255.255.000
@@ -255,11 +257,11 @@ PH1/OSC_OUT.Mode=HSE-External-Clock-Source
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
+ProjectManager.BackupPrevious=true
 ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=
+ProjectManager.CustomerFirmwarePackage=/home/cheff/STM32Cube/Repository/STM32Cube_FW_F7_V1.11.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F746ZGTx
