--- a/test_freeRtOs.ioc
+++ b/test_freeRtOs.ioc
@@ -21,12 +21,15 @@ ETH.IPParameters=MediaInterface,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PhyAddress=0
 FREERTOS.FootprintOK=true
+FREERTOS.HEAP_NUMBER=3
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,FootprintOK,configIDLE_SHOULD_YIELD,INCLUDE_vTaskDelayUntil,Queues01,MEMORY_ALLOCATION
-FREERTOS.MEMORY_ALLOCATION=2
-FREERTOS.Queues01=RxUartQueue,1,uint16_t,0,Static,RxUartQueueBuffer,RxUartQueueControlBlock
-FREERTOS.Tasks01=idle,-3,128,idle_start,Default,NULL,Static,idleBuffer,idleControlBlock;asserv_task,3,512,start_asserv_task,As external,NULL,Static,asserv_taskBuffer,asserv_taskControlBlock;background_task,-2,512,start_background_task,As external,NULL,Static,background_taskBuffer,background_taskControlBlock;io_task,1,1024,start_io_task,As external,NULL,Static,io_taskBuffer,io_taskControlBlock
+FREERTOS.IPParameters=Tasks01,FootprintOK,configIDLE_SHOULD_YIELD,INCLUDE_vTaskDelayUntil,Queues01,MEMORY_ALLOCATION,HEAP_NUMBER,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE
+FREERTOS.MEMORY_ALLOCATION=0
+FREERTOS.Queues01=RxUartQueue,1,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=idle,-3,512,idle_start,Default,NULL,Dynamic,NULL,NULL;asserv_task,3,512,start_asserv_task,As external,NULL,Dynamic,NULL,NULL;background_task,-2,512,start_background_task,As external,NULL,Dynamic,NULL,NULL;io_task,1,512,start_io_task,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configIDLE_SHOULD_YIELD=0
+FREERTOS.configTOTAL_HEAP_SIZE=131072
 File.Version=6
 KeepUserPlacement=true
 LWIP.CHECKSUM_BY_HARDWARE=1
@@ -39,11 +42,16 @@ LWIP.CHECKSUM_GEN_ICMP6=1
 LWIP.CHECKSUM_GEN_IP=1
 LWIP.CHECKSUM_GEN_UDP=1
 LWIP.ICMP_DEBUG=LWIP_DBG_ON
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_TCP,CHECKSUM_BY_HARDWARE,CHECKSUM_GEN_UDP,CHECKSUM_GEN_IP,CHECKSUM_GEN_ICMP,CHECKSUM_GEN_ICMP6,CHECKSUM_CHECK_IP,CHECKSUM_CHECK_UDP,CHECKSUM_CHECK_ICMP,CHECKSUM_CHECK_ICMP6,LWIP_DBG_MIN_LEVEL,ICMP_DEBUG
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_TCP,CHECKSUM_BY_HARDWARE,CHECKSUM_GEN_UDP,CHECKSUM_GEN_IP,CHECKSUM_GEN_ICMP,CHECKSUM_GEN_ICMP6,CHECKSUM_CHECK_IP,CHECKSUM_CHECK_UDP,CHECKSUM_CHECK_ICMP,CHECKSUM_CHECK_ICMP6,LWIP_DBG_MIN_LEVEL,ICMP_DEBUG,MEM_SIZE,MEMP_NUM_RAW_PCB,MEMP_NUM_TCP_PCB_LISTEN,MEMP_NUM_UDP_PCB,MEMP_NUM_TCP_PCB
 LWIP.IP_ADDRESS=192.168.010.002
 LWIP.LWIP_DBG_MIN_LEVEL=LWIP_DBG_LEVEL_WARNING
 LWIP.LWIP_DHCP=0
 LWIP.LWIP_TCP=0
+LWIP.MEMP_NUM_RAW_PCB=2
+LWIP.MEMP_NUM_TCP_PCB=0
+LWIP.MEMP_NUM_TCP_PCB_LISTEN=2
+LWIP.MEMP_NUM_UDP_PCB=2
+LWIP.MEM_SIZE=4096
 LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F7
