--- a/test_freeRtOs.ioc
+++ b/test_freeRtOs.ioc
@@ -48,7 +48,7 @@ LWIP.LWIP_DBG_MIN_LEVEL=LWIP_DBG_LEVEL_WARNING
 LWIP.LWIP_DHCP=0
 LWIP.LWIP_TCP=0
 LWIP.MEMP_NUM_RAW_PCB=2
-LWIP.MEMP_NUM_TCP_PCB=0
+LWIP.MEMP_NUM_TCP_PCB=1
 LWIP.MEMP_NUM_TCP_PCB_LISTEN=2
 LWIP.MEMP_NUM_UDP_PCB=2
 LWIP.MEM_SIZE=4096
@@ -98,13 +98,14 @@ Mcu.Pin31=PB7
 Mcu.Pin32=VP_FREERTOS_VS_ENABLE
 Mcu.Pin33=VP_LWIP_VS_Enabled
 Mcu.Pin34=VP_SYS_VS_tim11
+Mcu.Pin35=VP_TIM1_VS_OPM
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA7
-Mcu.PinsNb=35
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
@@ -233,7 +234,13 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE11.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PE11.GPIO_PuPd=GPIO_PULLUP
+PE11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE11.Signal=S_TIM1_CH2
+PE9.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PE9.GPIO_PuPd=GPIO_PULLUP
+PE9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE9.Signal=S_TIM1_CH1
 PF12.Locked=true
 PF12.Signal=GPXTI12
@@ -263,7 +270,7 @@ PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Locked=true
 PH1/OSC_OUT.Mode=HSE-External-Clock-Source
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=0
+PinOutPanel.RotationAngle=90
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=true
 ProjectManager.CompilerOptimize=3
@@ -293,35 +300,35 @@ ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
-RCC.AHBFreq_Value=72000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
+RCC.AHBFreq_Value=216000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=54000000
+RCC.APB1TimFreq_Value=108000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=36000000
-RCC.APB2TimFreq_Value=72000000
+RCC.APB2Freq_Value=108000000
+RCC.APB2TimFreq_Value=216000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=72000000
-RCC.EthernetFreq_Value=72000000
-RCC.FCLKCortexFreq_Value=72000000
+RCC.CortexFreq_Value=216000000
+RCC.EthernetFreq_Value=216000000
+RCC.FCLKCortexFreq_Value=216000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=72000000
+RCC.HCLKFreq_Value=216000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=36000000
-RCC.I2C2Freq_Value=36000000
-RCC.I2C3Freq_Value=36000000
-RCC.I2C4Freq_Value=36000000
+RCC.I2C1Freq_Value=54000000
+RCC.I2C2Freq_Value=54000000
+RCC.I2C3Freq_Value=54000000
+RCC.I2C4Freq_Value=54000000
 RCC.I2SClocksFreq_Value=48000000
 RCC.I2SFreq_Value=192000000
 RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
 RCC.LCDTFToutputFreq_Value=96000000
-RCC.LPTIM1Freq_Value=36000000
+RCC.LPTIM1Freq_Value=54000000
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.MCO2PinFreq_Value=72000000
+RCC.MCO2PinFreq_Value=216000000
 RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=72000000
+RCC.PLLCLKFreq_Value=216000000
 RCC.PLLI2SPCLKFreq_Value=192000000
 RCC.PLLI2SQCLKFreq_Value=192000000
 RCC.PLLI2SRCLKFreq_Value=192000000
@@ -329,8 +336,8 @@ RCC.PLLI2SRoutputFreq_Value=192000000
 RCC.PLLM=4
 RCC.PLLMCOFreq_Value=72000000
 RCC.PLLMUL=RCC_PLL_MUL9
-RCC.PLLN=72
-RCC.PLLQ=3
+RCC.PLLN=216
+RCC.PLLQ=9
 RCC.PLLQCLKFreq_Value=48000000
 RCC.PLLQoutputFreq_Value=48000000
 RCC.PLLSAIPCLKFreq_Value=192000000
@@ -343,9 +350,9 @@ RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI1Freq_Value=192000000
 RCC.SAI2Freq_Value=192000000
-RCC.SDMMCFreq_Value=72000000
+RCC.SDMMCFreq_Value=216000000
 RCC.SPDIFRXFreq_Value=192000000
-RCC.SYSCLKFreq_VALUE=72000000
+RCC.SYSCLKFreq_VALUE=216000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIM15Freq_Value=72000000
@@ -356,19 +363,19 @@ RCC.TIM20Freq_Value=72000000
 RCC.TIM2Freq_Value=72000000
 RCC.TIM3Freq_Value=72000000
 RCC.TIM8Freq_Value=72000000
-RCC.UART4Freq_Value=36000000
-RCC.UART5Freq_Value=36000000
-RCC.UART7Freq_Value=36000000
-RCC.UART8Freq_Value=36000000
-RCC.USART1Freq_Value=36000000
-RCC.USART2Freq_Value=36000000
-RCC.USART3Freq_Value=36000000
-RCC.USART6Freq_Value=36000000
+RCC.UART4Freq_Value=54000000
+RCC.UART5Freq_Value=54000000
+RCC.UART7Freq_Value=54000000
+RCC.UART8Freq_Value=54000000
+RCC.USART1Freq_Value=108000000
+RCC.USART2Freq_Value=54000000
+RCC.USART3Freq_Value=54000000
+RCC.USART6Freq_Value=108000000
 RCC.USBFreq_Value=48000000
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutput2Freq_Value=8000000
-RCC.VCOOutputFreq_Value=144000000
+RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=384000000
 RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
@@ -382,6 +389,13 @@ SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 SH.S_TIM1_CH2.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM1.EncoderMode=TIM_ENCODERMODE_TI12
+TIM1.IC1Filter=15
+TIM1.IC2Filter=15
+TIM1.IPParameters=EncoderMode,IC1Filter,IC2Filter,RepetitionCounter,Period,AutoReloadPreload
+TIM1.Period=65535
+TIM1.RepetitionCounter=65535
 USART3.IPParameters=VirtualMode-Asynchronous,WordLength
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART3.WordLength=WORDLENGTH_8B
@@ -393,5 +407,7 @@ VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_VS_tim11.Mode=TIM11
 VP_SYS_VS_tim11.Signal=SYS_VS_tim11
+VP_TIM1_VS_OPM.Mode=OPM_bit
+VP_TIM1_VS_OPM.Signal=TIM1_VS_OPM
 board=NUCLEO-F746ZG
 boardIOC=true
