--- a/test_freeRtOs.ioc
+++ b/test_freeRtOs.ioc
@@ -57,16 +57,18 @@ LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
-Mcu.IP10=USB_OTG_FS
+Mcu.IP10=USART3
+Mcu.IP11=USB_HOST
+Mcu.IP12=USB_OTG_FS
 Mcu.IP2=ETH
-Mcu.IP3=FREERTOS
-Mcu.IP4=LWIP
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TIM1
-Mcu.IP9=USART3
-Mcu.IPNb=11
+Mcu.IP3=FATFS
+Mcu.IP4=FREERTOS
+Mcu.IP5=LWIP
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IP9=TIM1
+Mcu.IPNb=13
 Mcu.Name=STM32F746ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -95,17 +97,19 @@ Mcu.Pin29=PG13
 Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin30=PB3
 Mcu.Pin31=PB7
-Mcu.Pin32=VP_FREERTOS_VS_ENABLE
-Mcu.Pin33=VP_LWIP_VS_Enabled
-Mcu.Pin34=VP_SYS_VS_tim11
-Mcu.Pin35=VP_TIM1_VS_OPM
+Mcu.Pin32=VP_FATFS_VS_USB
+Mcu.Pin33=VP_FREERTOS_VS_ENABLE
+Mcu.Pin34=VP_LWIP_VS_Enabled
+Mcu.Pin35=VP_SYS_VS_tim11
+Mcu.Pin36=VP_TIM1_VS_OPM
+Mcu.Pin37=VP_USB_HOST_VS_USB_HOST_MSC_FS
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA7
-Mcu.PinsNb=36
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
@@ -119,6 +123,7 @@ NVIC.ETH_WKUP_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true
@@ -137,12 +142,12 @@ PA10.Signal=USB_OTG_FS_ID
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USB_DM
 PA11.Locked=true
-PA11.Mode=Device_Only
+PA11.Mode=Host_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=USB_DP
 PA12.Locked=true
-PA12.Mode=Device_Only
+PA12.Mode=Host_Only
 PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -165,7 +170,6 @@ PA7.Signal=ETH_CRS_DV
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=USB_SOF [TP1]
 PA8.Locked=true
-PA8.Mode=Activate_SOF_FS
 PA8.Signal=USB_OTG_FS_SOF
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=USB_VBUS
@@ -265,10 +269,10 @@ PG7.Signal=GPIO_Input
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
 PH0/OSC_IN.Locked=true
-PH0/OSC_IN.Mode=HSE-External-Clock-Source
+PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Locked=true
-PH1/OSC_OUT.Mode=HSE-External-Clock-Source
+PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=90
 ProjectManager.AskForMigrate=true
@@ -296,7 +300,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_LWIP_Init-LWIP-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_LWIP_Init-LWIP-false-HAL-true,8-MX_USB_HOST_Init-USB_HOST-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -399,8 +403,25 @@ TIM1.RepetitionCounter=65535
 USART3.IPParameters=VirtualMode-Asynchronous,WordLength
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART3.WordLength=WORDLENGTH_8B
-USB_OTG_FS.IPParameters=VirtualMode
-USB_OTG_FS.VirtualMode=Device_Only
+USB_HOST.BSP.number=1
+USB_HOST.IPParameters=VirtualModeFS,USBH_HandleTypeDef-MSC_FS
+USB_HOST.USBH_HandleTypeDef-MSC_FS=hUsbHostFS
+USB_HOST.VirtualModeFS=Msc
+USB_HOST0.BSP.STBoard=false
+USB_HOST0.BSP.api=UnknownBspDriver
+USB_HOST0.BSP.component=
+USB_HOST0.BSP.i2caddr=0
+USB_HOST0.BSP.i2creg=0
+USB_HOST0.BSP.instance=PB14
+USB_HOST0.BSP.ip=GPIO
+USB_HOST0.BSP.mode=Output
+USB_HOST0.BSP.name=Drive_VBUS_FS
+USB_HOST0.BSP.solution=PB14
+USB_OTG_FS.IPParameters=VirtualMode,phy_itface
+USB_OTG_FS.VirtualMode=Host_Only
+USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
+VP_FATFS_VS_USB.Mode=USB
+VP_FATFS_VS_USB.Signal=FATFS_VS_USB
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_LWIP_VS_Enabled.Mode=Enabled
@@ -409,5 +430,7 @@ VP_SYS_VS_tim11.Mode=TIM11
 VP_SYS_VS_tim11.Signal=SYS_VS_tim11
 VP_TIM1_VS_OPM.Mode=OPM_bit
 VP_TIM1_VS_OPM.Signal=TIM1_VS_OPM
+VP_USB_HOST_VS_USB_HOST_MSC_FS.Mode=MSC_FS
+VP_USB_HOST_VS_USB_HOST_MSC_FS.Signal=USB_HOST_VS_USB_HOST_MSC_FS
 board=NUCLEO-F746ZG
 boardIOC=true
